tests/invalid/fstring_set_unsupported/main.py
def run_case() -> None:
    s: set[int] = {1, 2}
    out: str = f"{s}"


if __name__ == "__main__":
    run_case()
